Add 8.2 lock files.

--- a/tine.lock-8.2.1
+++ b/tine.lock-8.2.1
@@ -4,12 +4,13 @@ async == 2.2.1
 attoparsec == 0.13.2.2
 base-orphans == 0.7
 bifunctors == 5.4.2
+blaze-builder == 0.4.1.0
 cabal-doctest == 1.0.6
 call-stack == 0.1.0
 case-insensitive == 1.2.0.11
 comonad == 5.0.3
-conduit == 1.3.0.2
-conduit-extra == 1.3.0
+conduit == 1.2.13.1
+conduit-extra == 1.2.3.2
 contravariant == 1.4.1
 distributive == 0.5.3
 exceptions == 0.8.3
@@ -20,8 +21,10 @@ ieee754 == 0.8.0
 integer-logarithms == 1.0.2.1
 kan-extensions == 5.1
 lens == 4.15.4
+lifted-base == 0.2.3.12
+mmorph == 1.1.2
+monad-control == 1.0.2.3
 monad-loops == 0.4.3
-mono-traversable == 1.0.8.1
 mtl == 2.2.2
 network == 2.7.0.0
 old-locale == 1.0.0.7
@@ -35,25 +38,24 @@ quickcheck-instances == 0.3.14
 quickcheck-text == 0.1.2.1
 random == 1.1
 reflection == 2.1.3
-resourcet == 1.2.1
+resourcet == 1.1.11
 SafeSemaphore == 0.10.1
 scientific == 0.3.6.2
 semigroupoids == 5.2.2
 semigroups == 0.18.4
-split == 0.2.3.3
 StateVar == 1.1.1.0
 stm == 2.4.5.0
-streaming-commons == 0.2.0.0
+streaming-commons == 0.1.19
 tagged == 0.8.5
 text == 1.2.3.0
 tf-random == 0.5
 th-abstraction == 0.2.6.0
+transformers-base == 0.4.4
 transformers-compat == 0.5.1.4
 typed-process == 0.2.2.0
 unliftio-core == 0.1.1.0
 unordered-containers == 0.2.9.0
 uuid-types == 1.0.3
 vector == 0.12.0.1
-vector-algorithms == 0.7.0.1
 void == 0.7.2
 zlib == 0.6.2
